Fix dropdown menu z-index

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -127,6 +127,7 @@ main {
   position: absolute;
   text-align: left;
   top: 2em;
+  z-index: 1000;
 }
 
 .dropdown.open div[role="menu"] a {
